--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <input type="text" name="website" style="display:none" tabindex="-1" autocomplete="off">
 
       <button class="btn btn-solid" type="submit">Enviar</button>
-      <p class="form-note">* El formulario envia datos a PHP.</p>
+      <p class="form-note"></p>
     </form>
 
     </div>
