add formularip dde contactoa infinity free

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </ul>
       </div>
 
-      <form class="contact-form" action="contact.php" method="post" novalidate>
+      <form action="https://lunam.infinityfree.me/contact.php" method="POST">
       <input name="name" type="text" placeholder="Nombre" required />
       <input name="email" type="email" placeholder="Email" required />
       <textarea name="message" rows="5" placeholder="Contame de tu proyecto..." required></textarea>
