--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
           funcionales y estéticos, priorizando la claridad, la performance y el detalle.
         </p>
         <p class="about-tags">
-          <span>HTML</span><span>CSS</span><span>JavaScript</span><span>Responsive</span><span>SEO básico</span><span>Analytics/Pixel</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+          <span>Responsive</span>
+          <span>SEO básico</span>
+          <span>Analytics/Pixel</span>
+          <span>PHP básico</span>
         </p>
+
         <a href="#servicios" class="link-inline">Ver servicios</a>
       </div>
     </div>
