--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Luna Martello · Portfolio</title>
+  <title>Luna M · Portfolio</title>
   <meta name="description" content="Portfolio de Luna Martello — Diseño y desarrollo web minimalista con identidad, simpleza y propósito." />
 
   <!-- Tipografías -->
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/2eca0425c3.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="img/star.png" type="image/png">
 </head>
 <body>
   <!-- Header -->
