--- a/index.html
+++ b/index.html
@@ -112,14 +112,13 @@
         <!-- Proyecto 1 -->
         <article class="project">
           <div class="project-thumb">
-            <img src="https://picsum.photos/id/1015/800/500" alt="Captura del proyecto 'La Casita'" loading="lazy" width="800" height="500">
+            <img src="/img/lacasita.JPG" alt="Captura del proyecto 'La Casita'" loading="lazy" width="800" height="500">
           </div>
           <div class="project-body">
             <h3>La Casita</h3>
             <p>Landing minimalista para alojamiento boutique en <strong>Villa La Angostura</strong>. Performance y claridad visual.</p>
             <div class="project-actions">
               <a class="btn btn-outline btn-sm" href="https://lacasita-web.vercel.app/" target="_blank" rel="noopener">Ver sitio</a>
-              <a class="link-inline" href="#" aria-disabled="true">Caso de estudio (próx.)</a>
             </div>
           </div>
         </article>
@@ -127,34 +126,36 @@
         <!-- Proyecto 2 -->
         <article class="project">
           <div class="project-thumb">
-            <img src="https://picsum.photos/id/1016/800/500" alt="Captura del proyecto 'El Container'" loading="lazy" width="800" height="500">
+            <img src="/img/container.jpg" alt="Captura del proyecto 'El Container'" loading="lazy" width="800" height="500">
           </div>
           <div class="project-body">
             <h3>El Container</h3>
             <p>One-page clara y directa para unidad de alojamiento. Enfoque en usabilidad y booking rápido.</p>
             <div class="project-actions">
-              <a class="btn btn-outline btn-sm" href="#" aria-disabled="true">Ver sitio</a>
-              <a class="link-inline" href="#" aria-disabled="true">Caso de estudio (próx.)</a>
+              <a class="btn btn-outline btn-sm" href="https://container-web-ar.vercel.app/" target="_blank">Ver sitio</a>
             </div>
           </div>
         </article>
 
+
         <!-- Proyecto 3 (placeholder) -->
         <article class="project">
           <div class="project-thumb">
-            <img src="https://picsum.photos/id/1020/800/500" alt="Mockup de portfolio para fotógrafo" loading="lazy" width="800" height="500">
+            <img src="/img/ph.jpg" alt="Mockup de portfolio para fotógrafo" loading="lazy" width="800" height="500">
           </div>
           <div class="project-body">
             <h3>Portfolio Fotógrafo</h3>
             <p>Galería elegante con foco en imagen y velocidad. Próximo proyecto.</p>
             <div class="project-actions">
-              <a class="btn btn-outline btn-sm" href="#" aria-disabled="true">Ver sitio</a>
-              <a class="link-inline" href="#" aria-disabled="true">Caso de estudio (próx.)</a>
+              <a class="btn btn-outline btn-sm" 
+                href="https://500px.com/p/alinatsvor?view=photos" 
+                target="_blank">
+                Ver sitio
+              </a>
             </div>
           </div>
         </article>
-      </div>
-    </div>
+
   </section>
 
   <!-- Contacto -->
