--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container about-grid">
       <div class="about-photo">
         <!-- img -->
-        <img src="/img/lm.svg" alt="Retrato de Luna" loading="lazy" width="600" height="700">
+        <img src="/img/LM.jpeg" alt="Retrato de Luna" loading="lazy" width="600" height="700">
       </div>
       <div class="about-content">
         <h2 id="about-title" class="section-title">Acerca de mí</h2>
@@ -167,7 +167,7 @@
         <ul class="contact-list">
           <li><i class="fa-brands fa-instagram" aria-hidden="true"></i> <a href="https://instagram.com/xlunarandom" target="_blank" rel="noopener">@xlunarandom</a></li>
           <li>
-          <i class="fa-brands fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a></li>
+          <i class="fa-brands fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/ayelenbusca" target="_blank" rel="noopener">LinkedIn</a></li>
           <li><i class="fa-brands fa-whatsapp" aria-hidden="true"></i> <a href="https://wa.me/5490000000000" target="_blank" rel="noopener">WhatsApp</a></li>
           <li><i class="fa-regular fa-envelope" aria-hidden="true"></i> <a href="mailto:lunafreelancerr@gmail.com">lunafreelancerr@gmail.com</a></li>
         </ul>
