mod section proyectos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
           </div>
           <div class="project-body">
             <h3>La Casita</h3>
-            <p>Landing minimalista para alojamiento boutique en <strong>Villa La Angostura</strong>. Performance y claridad visual.</p>
+            <p>Landing page para alojamiento tipo Airbnb ubicado en Villa La Angostura,Patagonia Argentina. Diseño minimalista, optimizado para carga rápida y una experiencia fluida. Enfoque en imágenes de alta calidad, estructura clara y navegación intuitiva para destacar el espacio, transmitir calma y naturaleza, y guiar al usuario a reservar sin distracciones.</p>
+
             <div class="project-actions">
               <a class="btn btn-outline btn-sm" href="https://lacasita-web.vercel.app/" target="_blank" rel="noopener">Ver sitio</a>
             </div>
@@ -130,7 +131,7 @@
           </div>
           <div class="project-body">
             <h3>El Container</h3>
-            <p>One-page clara y directa para unidad de alojamiento. Enfoque en usabilidad y booking rápido.</p>
+            <p>Landing page diseñada para presentar un alojamiento tipo container, con un enfoque minimalista y moderno. Prioriza la velocidad de carga, la claridad visual y una navegación simple que permite destacar el espacio con imágenes amplias y contenido preciso.</p>
             <div class="project-actions">
               <a class="btn btn-outline btn-sm" href="https://container-web-ar.vercel.app/" target="_blank">Ver sitio</a>
             </div>
@@ -145,7 +146,7 @@
           </div>
           <div class="project-body">
             <h3>Portfolio Fotógrafo</h3>
-            <p>Galería elegante con foco en imagen y velocidad. Próximo proyecto.</p>
+            <p>Próximo proyecto.</p>
             <div class="project-actions">
               <a class="btn btn-outline btn-sm" 
                 href="https://500px.com/p/alinatsvor?view=photos" 
