--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/2eca0425c3.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="img/star.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
   <!-- Header -->
